--- a/Organization_a/cup10202.html
+++ b/Organization_a/cup10202.html
@@ -770,14 +770,16 @@
 									</ul>
 
 									<h3 class="tit" id="cup10202_usersLb">Users</h3>
-									<div class="ibsheepTop">
+									<!-- 2019-02-25 수정 -->
+									<div class="ibsheetTop">
+										<!--// 2019-02-25 수정 -->
 										<div class="ui floating dropdown labeled icon button filter" id="">
 											<i class="filter icon"></i>
 											<span class="text">Filter Status</span>
 											<div class="menu">
 												<div class="ui icon search input">
 													<i class="search icon"></i>
-													<input type="text" placeholder="Search tags...">
+													<input type="text" placeholder="Filter Status">
 												</div>
 												<div class="header">
 													<i class="tags icon"></i>
