--- a/admin_a/cup11001.html
+++ b/admin_a/cup11001.html
@@ -156,12 +156,12 @@
 					<!-- 컨텐츠 영역 -->
 					<form action="">
 						<div class="layout Layout_List">
-							<h2 class="tit" id="i11001-systemCodeListLb">System Code List</h2>
+							<h2 class="tit" id="i11001_systemCodeListLb">System Code List</h2>
 							<div class="schOptionGroup">
 								<ul class="itemList1">
 									<li>
 										<dl class="inpItem">
-											<dt id="i11001-keywordLb">Keyword</dt>
+											<dt id="i11001_keywordLb">Keyword</dt>
 											<dd>
 												<div class="inputBox">
 													<!-- 2019-02-20 수정 -->
@@ -174,7 +174,7 @@
 									</li>
 									<li>
 										<dl class="inpItem">
-											<dt id="i11001-descriptionLb">Description</dt>
+											<dt id="i11001_descriptionLb">Description</dt>
 											<dd>
 												<div class="inputBox">
 													<input type="text" name="i11001_description" class="inp" id="i11001_description" placeholder="Description">
@@ -185,7 +185,7 @@
 									</li>
 									<li>
 										<dl class="inpItem">
-											<dt id="i11001-creationLb">Creation</dt>
+											<dt id="i11001_creationLb">Creation</dt>
 											<dd>
 												<div class="inputBox Edit_date">
 													<input type="text" name="daterange" class="inp daterange" id="i11001_creation" placeholder="From - To" />
@@ -194,17 +194,19 @@
 										</dl>
 									</li>
 								</ul>
-								<button type="button" class="btn schBtn" id="i11001-search">Search</button>
+								<button type="button" class="btn schBtn" id="i11001_search">Search</button>
 							</div>
-							<h3 class="tit" id="i11001-systemCodesLb">System Codes</h3>
-							<div class="ibsheepTop">
-								<div class="ui floating dropdown labeled icon button filter" id="i11001-filterStatus">
+							<h3 class="tit" id="i11001_systemCodesLb">System Codes</h3>
+							<!-- 2019-02-25 수정 -->
+							<div class="ibsheetTop">
+								<!--// 2019-02-25 수정 -->
+								<div class="ui floating dropdown labeled icon button filter" id="i11001_filterStatus">
 									<i class="filter icon"></i>
 									<span class="text">Filter Status</span>
 									<div class="menu">
 										<div class="ui icon search input">
 											<i class="search icon"></i>
-											<input type="text" placeholder="Search tags...">
+											<input type="text" placeholder="Filter Status">
 										</div>
 										<div class="header">
 											<i class="tags icon"></i>
@@ -252,7 +254,7 @@
 								</div>
 								<!-- 2019-02-21 수정 -->
 								<div class="btns">
-									<button type="button" class="btn" id="i11001-addSystemCode">Add System Code</button>
+									<button type="button" class="btn" id="i11001_addSystemCode">Add System Code</button>
 								</div>
 								<!--// 2019-02-21 수정 -->
 							</div>
