--- a/user/cup10106.html
+++ b/user/cup10106.html
@@ -7,7 +7,6 @@
 	<meta name="x-apple-disable-message-reformatting" />
 	<title>Customer Portal</title>
 	<link rel="shortcut icon" href="../static/images/common/favicon.ico">
-	<link href="../static/css/lib/swiper.css" rel="stylesheet">
 	<link href="../static/css/reset.css" rel="stylesheet" />
 	<link href="../static/css/common.css" rel="stylesheet" />
 	<link href="../static/css/contents.css" rel="stylesheet" />
@@ -38,33 +37,21 @@
 			<h1><img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" /></h1>
 			<div class="flexContent">
 				<div class="inner">
-					<h2 class="tit" id="i10001_signInLb">Sign In</h2>
+					<h2 class="tit" id="i10106_accountleaveOrganizationdLb">Account Inactivated</h2>
 					<div class="inpInner">
-						<div class="idArea">
-							<div class="inputBox full">
-								<!-- 2019-01-29 클래스 추가 -->
-								<input type="text" name="i10001_userId" class="inp Mandate" id="i10001_userId" maxlength="50" placeholder="Email or User ID" />
-								<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
-							</div>
-						</div>
-						<div class="loginCheck">
-							<div class="checkbox">
-								<input type="checkbox" name="i10001_rememberMe" id="i10001_rememberMe"><label for="i10001_rememberMe" id="i10001_rememberMeLb">Remember Me</label>
-							</div>
-						</div>
-						<div class="joinBtn">
-							<a href="#" id="i10001_newAccountLb">New Account</a>
-							<div class="btns">
-								<button type="button" class="btn" id="i10001_next">Next</button> <!-- 2019-02-01 수정 -->
-							</div>
-						</div>
+						<p class="nTxt" id="i10106_accountleaveOrganizationdInstructionLb">
+							You have now successfully inactivated your <br />
+							account from organization.<br />
+							You can re-subscribe to OPUS Logistics service <br />
+							using your Email.
+						</p>
 					</div>
 				</div>
 			</div>
 			<div class="link">
-				<a href="#" id="i10001_helpLb">Help</a>
-				<a href="#" id="i10001_privacyLb">Privacy</a>
-				<a href="#" id="i10001_termsLb">Terms</a>
+				<a href="#" id="i10106_helpLb">Help</a>
+				<a href="#" id="i10106_privacyLb">Privacy</a>
+				<a href="#" id="i10106_termsLb">Terms</a>
 			</div>
 		</div>
 	</div>
