--- a/Organization_a/cup10201.html
+++ b/Organization_a/cup10201.html
@@ -442,7 +442,9 @@
 								<button type="button" class="btn schBtn" id="i10201-search">Search</button>
 							</div>
 							<h3 class="tit" id="i10201-organizationsLb">Organizations</h3>
-							<div class="ibsheepTop">
+							<!-- 2019-02-25 수정 -->
+							<div class="ibsheetTop">
+								<!--// 2019-02-25 수정 -->
 								<!-- 2019-02-12 수정 -->
 								<div class="ui floating dropdown labeled icon button filter" id="i10201-filterStatus">
 									<i class="filter icon"></i>
@@ -450,7 +452,7 @@
 									<div class="menu">
 										<div class="ui icon search input">
 											<i class="search icon"></i>
-											<input type="text" placeholder="Search tags...">
+											<input type="text" placeholder="Filter Status">
 										</div>
 										<div class="header">
 											<i class="tags icon"></i>
