--- a/billing_a/cup10603.html
+++ b/billing_a/cup10603.html
@@ -205,14 +205,16 @@
 							</div>
 
 							<h3 class="tit" id="i10603-invoicesLb">Invoices</h3>
-							<div class="ibsheepTop">
+							<!-- 2019-02-25 수정 -->
+							<div class="ibsheetTop">
+								<!--// 2019-02-25 수정 -->
 								<div class="ui floating dropdown labeled icon button filter" id="i10603-filterStatus">
 									<i class="filter icon"></i>
 									<span class="text">Filter Status</span>
 									<div class="menu">
 										<div class="ui icon search input">
 											<i class="search icon"></i>
-											<input type="text" placeholder="Search tags...">
+											<input type="text" placeholder="Filter Status">
 										</div>
 										<div class="header">
 											<i class="tags icon"></i>
