--- a/pub/templateB.html
+++ b/pub/templateB.html
@@ -219,10 +219,25 @@
 	</textarea>
 	<!-- //souce code 뷰어 -->
 
-
-
-
-
+	<h2>input타입 - Edit_Organization - ReadOnly</h2>
+	<div class="inputBox Edit_Organization full">
+		<div class="thumb">
+			<img src="../static/images/common/icon/icon_logo_small.png" alt="" name="" id="" />
+		</div>
+		<input type="text" name="" class="inp Readonly" id="" placeholder="" readonly="readonly" tabindex="-1">
+	</div>
+	<!-- souce code 뷰어 -->
+	<div class="box">
+		<pre class="brush: html;">
+			<div class="inputBox Edit_Organization full">
+				<div class="thumb">
+					<img src="../static/images/common/icon/icon_logo_small.png" alt="" name="" id="" />
+				</div>
+				<input type="text" name="" class="inp Readonly" id="" placeholder="" readonly="readonly" tabindex="-1">
+			</div>
+		</pre>
+	</div>
+	<!-- //souce code 뷰어 -->
 
 
 	<h2>input타입 - Edit_Time</h2>
@@ -307,10 +322,6 @@
 	</div>
 	<!-- //souce code 뷰어 -->
 
-
-
-
-
 	<h2>input타입 - 증감</h2>
 	<div class="inputBox count">
 		<button type="button" class="plus"><span>Plus</span></button>
@@ -334,10 +345,20 @@
 		<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="USD">
 		<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="1,500.00">
 	</div>
+
+	<div class="inputBox long readonly amount">
+		<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="USD">
+		<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="1,500.00">
+	</div>
 	<!-- souce code 뷰어 -->
 	<div class="box">
 		<pre class="brush: html;">
 			<div class="inputBox readonly amount">
+				<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="USD">
+				<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="1,500.00">
+			</div>
+
+			<div class="inputBox long readonly amount">
 				<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="USD">
 				<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="1,500.00">
 			</div>
