--- a/pub/templateC.html
+++ b/pub/templateC.html
@@ -263,6 +263,87 @@
 	</div>
 	<!-- //souce code 뷰어 -->
 
+
+	<h2>IBSheet</h2>
+	<h3 class="tit">IBSheet</h3>
+	<div class="ibsheetTop">
+		<div class="ui floating dropdown labeled icon button filter" id="i10010-filterStatus">
+			<i class="filter icon"></i>
+			<span class="text">Filter Status</span>
+			<div class="menu">
+				<div class="ui icon search input">
+					<i class="search icon"></i>
+					<input type="text" placeholder="Filter Status">
+				</div>
+				<div class="header">
+					<i class="tags icon"></i>
+					Tag Label
+				</div>
+				<div class="scrolling menu">
+					<div class="item">
+						<div class="ui red empty circular label"></div>
+						Important
+					</div>
+					<div class="item">
+						<div class="ui blue empty circular label"></div>
+						Announcement
+					</div>
+					<div class="item">
+						<div class="ui black empty circular label"></div>
+						Cannot Fix
+					</div>
+					<div class="item">
+						<div class="ui purple empty circular label"></div>
+						News
+					</div>
+					<div class="item">
+						<div class="ui orange empty circular label"></div>
+						Enhancement
+					</div>
+					<div class="item">
+						<div class="ui empty circular label"></div>
+						Change Declined
+					</div>
+					<div class="item">
+						<div class="ui yellow empty circular label"></div>
+						Off Topic
+					</div>
+					<div class="item">
+						<div class="ui pink empty circular label"></div>
+						Interesting
+					</div>
+					<div class="item">
+						<div class="ui green empty circular label"></div>
+						Discussion
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="btns">
+			<button type="button" class="btn" id="">IBSheet</button>
+		</div>
+	</div>
+	<div class="ibsheetDiv">
+		IBSheet
+	</div>
+	<!-- souce code 뷰어 -->
+	<div class="box">
+		<pre class="brush: html;">
+			<h3 class="tit" id=""></h3>
+			<div class="ibsheetTop">
+				Filter
+				<div class="btns">
+					<button type="button" class="btn" id=""></button>
+				</div>
+			</div>
+			<div class="ibsheetDiv">
+				IBSheet
+			</div>
+		</pre>
+	</div>
+	<!-- //souce code 뷰어 -->
+
+
 	<h2></h2>
 	<!-- souce code 뷰어 -->
 	<div class="box">
