--- a/service_a/cup10701.html
+++ b/service_a/cup10701.html
@@ -209,7 +209,9 @@
 								<!--// 2019-02-01 수정 -->
 							</div>
 							<h3 class="tit" id="i10701_servicesLb">Services</h3>
-							<div class="ibsheepTop">
+							<!-- 2019-02-25 수정 -->
+							<div class="ibsheetTop">
+								<!--// 2019-02-25 수정 -->
 								<!-- 2019-02-12 수정 -->
 								<div class="ui floating dropdown labeled icon button filter" id="i10701_filterStatus">
 									<i class="filter icon"></i>
@@ -217,7 +219,7 @@
 									<div class="menu">
 										<div class="ui icon search input">
 											<i class="search icon"></i>
-											<input type="text" placeholder="Search tags...">
+											<input type="text" placeholder="Filter Status">
 										</div>
 										<div class="header">
 											<i class="tags icon"></i>
