--- a/service_a/cup10703.html
+++ b/service_a/cup10703.html
@@ -206,7 +206,9 @@
 								<button type="button" class="btn schBtn" id="i10703_search">Search</button>
 							</div>
 							<h3 class="tit" id="i10703_tariffsLb">Tariffs</h3>
-							<div class="ibsheepTop">
+							<!-- 2019-02-25 수정 -->
+							<div class="ibsheetTop">
+								<!--// 2019-02-25 수정 -->
 								<!-- 2019-02-12 수정 -->
 								<div class="ui floating dropdown labeled icon button filter" id="i10703_filterStatus">
 									<i class="filter icon"></i>
@@ -214,7 +216,7 @@
 									<div class="menu">
 										<div class="ui icon search input">
 											<i class="search icon"></i>
-											<input type="text" placeholder="Search tags...">
+											<input type="text" placeholder="Filter Status">
 										</div>
 										<div class="header">
 											<i class="tags icon"></i>
