--- a/site_a/cup10801.html
+++ b/site_a/cup10801.html
@@ -202,14 +202,16 @@
 								<button type="button" class="btn schBtn" id="i10801-search">Search</button>
 							</div>
 							<h3 class="tit" id="i10801-noticesLb">Notices</h3>
-							<div class="ibsheepTop">
+							<!-- 2019-02-25 수정 -->
+							<div class="ibsheetTop">
+								<!--// 2019-02-25 수정 -->
 								<div class="ui floating dropdown labeled icon button filter" id="i10801-filterStatus">
 									<i class="filter icon"></i>
 									<span class="text">Filter Status</span>
 									<div class="menu">
 										<div class="ui icon search input">
 											<i class="search icon"></i>
-											<input type="text" placeholder="Search tags...">
+											<input type="text" placeholder="Filter Status">
 										</div>
 										<div class="header">
 											<i class="tags icon"></i>
