--- a/htmlList_a.html
+++ b/htmlList_a.html
@@ -397,8 +397,8 @@
 					<tr>
                         <td>Tenant 관리</td>
                         <td></td>
-                        <td><a target="_blank" href="Organization_a/cup10204.html"></a></td>
-                        <td class="red"></td>
+                        <td><a target="_blank" href="Organization_a/cup10204.html">cup10204.html</a></td>
+                        <td class="red">작업 중</td>
                     </tr>
 					<tr>
                         <td>Company 목록</td>
