--- a/htmlList.html
+++ b/htmlList.html
@@ -193,6 +193,15 @@
 							<div class="red"></div>
 						</td>
                     </tr>
+					<tr>
+                        <td>Message Popup</td>
+                        <td></td>
+                        <td><a target="_blank" href="common/messagepopup.html">messagepopup.html</a></td>
+                        <td>
+							Message Popup
+							<div class="red"></div>
+						</td>
+                    </tr>
 
                     <tr class="line">
                         <th>메인</th>
@@ -364,31 +373,51 @@
                         <td>암호 변경(팝업)</td>
                         <td></td>
                         <td><a target="_blank" href="user/cup10102.html">cup10102.html</a></td>
-                        <td class="red"></td>
+                        <td>
+							관리자 페이지와 같이 사용
+							<div class="red">
+							</div>
+						</td>
                     </tr>
 					<tr>
                         <td>사용자초청(팝업)</td>
                         <td></td>
                         <td><a target="_blank" href="user/cup10104.html">cup10104.html</a></td>
-                        <td class="red"></td>
+                        <td>
+							관리자 페이지와 같이 사용
+							<div class="red">
+							</div>
+						</td>
                     </tr>
 					<tr>
                         <td>해지 요청(메일)</td>
                         <td></td>
                         <td><a target="_blank" href="user/cup10105.html">cup10105.html</a></td>
-                        <td class="red"></td>
+                        <td>
+							관리자 페이지와 같이 사용
+							<div class="red">
+							</div>
+						</td>
                     </tr>
 					<tr>
                         <td>해지 요청 확인</td>
                         <td></td>
                         <td><a target="_blank" href="user/cup10106.html">cup10106.html</a></td>
-                        <td class="red"></td>
+                        <td>
+							관리자 페이지와 같이 사용
+							<div class="red">
+							</div>
+						</td>
                     </tr>
 					<tr>
                         <td>사용자초청(메일)</td>
                         <td></td>
                         <td><a target="_blank" href="user/cup10107.html">cup10107.html</a></td>
-                        <td class="red"></td>
+                        <td>
+							관리자 페이지와 같이 사용
+							<div class="red">
+							</div>
+						</td>
                     </tr>
 					<tr>
                         <td>해지 요청</td>
