--- a/pub/templateB.html
+++ b/pub/templateB.html
@@ -1035,6 +1035,23 @@ value="" 값과 option text를 비교하여 검색하는 기능 두가지가 동
 	<!-- //souce code 뷰어 -->
 
 
+	<h2>TEXTAREA</h2>
+	<div class="textareaDiv">
+		<textarea name="" id="" cols="30" rows="10" class="textarea" maxlength="500" placeholder=""></textarea>
+		<div class="byte"><span class="bold">0</span>/500</div>
+	</div>
+	<!-- souce code 뷰어 -->
+	<div class="box">
+		<pre class="brush: html;">
+			<div class="textareaDiv">
+				<textarea name="" id="" cols="30" rows="10" class="textarea" maxlength="500" placeholder=""></textarea>
+				<div class="byte"><span class="bold">0</span>/500</div>
+			</div>
+		</pre>
+	</div>
+	<!-- //souce code 뷰어 -->
+
+
 	<h2>동의 체크</h2>
 	<div class="agreeChk">
 		<p class="txt">I am sure to read and to agree the terms</p>
@@ -1054,16 +1071,6 @@ value="" 값과 option text를 비교하여 검색하는 기능 두가지가 동
 		</pre>
 	</div>
 	<!-- //souce code 뷰어 -->
-
-
-
-
-
-
-
-
-
-
 
 
 	<h2></h2>
