--- a/subscription_a/cup10507.html
+++ b/subscription_a/cup10507.html
@@ -34,48 +34,26 @@
 <body>
 	<section class="layerPopup">
 		<div class="inner">
-			<h1 class="popupTitle" id="i10102_changePasswordLb">Change Password</h1>
+			<h1 class="popupTitle" id="i10507_approvalStepLb">Approval Step</h1>
 			<div class="layerContent">
 				<dl class="inpItem">
-					<dt id="i10102_oldPasswordLb">Old Password</dt>
+					<dt id="i10507_selectBillingPolicyLb">Select Billing Policy</dt>
 					<dd>
-						<div class="inputBox">
-							<input type="text" name="i10102_oldPassword" class="inp pwinp inputFocus" id="i10102_oldPassword" placeholder="" />
-							<button type="button" class="inpReset"></button>
+						<div class="comboBox Mandate">
+							<select class="comboSelect" id="i10507_billingPolicy" placeholder="">
+								<option value="">Select a Type</option>
+								<option value="T-Shirt">T-Shirt</option>
+								<option value="T-Shirt Woman">T-Shirt Woman</option>
+								<option value="Yellow T-Shirt">Yellow T-Shirt</option>
+								<option value="Zebra T-Shoot">Zebra T-Shoot</option>
+							</select>
 						</div>
 					</dd>
 				</dl>
-				<div class="txtBox">
-					<p class="alertMessage" id="i10102_wrongPasswordLb">Wrong Password. Please, Input the password again.</p>
-				</div>
-				<dl class="inpItem">
-					<dt id="i10102_newPasswordLb">New Password</dt>
-					<dd>
-						<div class="inputBox">
-							<input type="text" name="i10102_newPassword" class="inp pwinp" id="i10102_newPassword" placeholder="" />
-							<button type="button" class="inpReset"></button>
-						</div>
-					</dd>
-				</dl>
-				<div class="txtBox">
-					<p class="alertMessage" id="i10102_shortPasswordLb">Password must contain at least 8 characters. At least one alphabet and one number should be included.</p>
-				</div>
-				<dl class="inpItem">
-					<dt id="i10102_confirmPasswordLb">Confirm Password</dt>
-					<dd>
-						<div class="inputBox">
-							<input type="text" name="i10102_confirmPassword" class="inp pwinp" id="i10102_confirmPassword" placeholder="" />
-							<button type="button" class="inpReset">The passwords you entered don’t match.</button>
-						</div>
-					</dd>
-				</dl>
-				<div class="txtBox">
-					<p class="alertMessage" id="i10102_misconfirmPasswordLb">The passwords you entered don’t match.</p>
-				</div>
 			</div>
 		</div>
 		<div class="layerBtns">
-			<button type="button" class="btn basic">Change Password</button>
+			<button type="button" class="btn basic" id="i10507_applyBillingPolicy">Apply Billing Policy</button>
 		</div>
 		<button type="button" class="btn close">Close</button>
 	</section>
