--- a/htmlList.html
+++ b/htmlList.html
@@ -447,7 +447,7 @@
                         <td>사용자초청(팝업)</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
-                        <td class="red"></td>
+                        <td class="red">삭제 페이지</td>
                     </tr>
 
 					<tr class="line">
@@ -467,7 +467,7 @@
                         <td>상품선택(팝업)</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
-                        <td class="red"></td>
+                        <td class="red">삭제 페이지</td>
                     </tr>
 
 					<tr class="line">
@@ -483,19 +483,19 @@
                         <td>승인과금</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
-                        <td class="red"></td>
+                        <td class="red">cup10603.html 화면으로 대체</td>
                     </tr>
 					<tr>
                         <td>지불/미지불 과금</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
-                        <td class="red"></td>
+                        <td class="red">cup10603.html 화면으로 대체</td>
                     </tr>
 					<tr>
                         <td>취소과금</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
-                        <td class="red"></td>
+                        <td class="red">cup10603.html 화면으로 대체</td>
                     </tr>
 					<tr>
                         <td>서비스 사용내역</td>
@@ -509,13 +509,13 @@
                         <td>사용자수 과금내역</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
-                        <td class="red">삭제</td>
+                        <td class="red">삭제 페이지</td>
                     </tr>
 					<tr>
                         <td>트랜젝션수 과금내역</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
-                        <td class="red">삭제</td>
+                        <td class="red">삭제 페이지</td>
                     </tr>
 					<tr>
                         <td>트랜젝션 내역</td>
