--- a/htmlList_a.html
+++ b/htmlList_a.html
@@ -394,7 +394,8 @@
                         <td><a target="_blank" href="Organization_a/cup10202.html">cup10202.html</a></td>
                         <td class="red">
 							2019-02-20 수정 <br />
-							2019-02-25 수정
+							2019-02-25 수정 <br />
+							2019-02-27 수정
 						</td>
                     </tr>
 					<tr>
@@ -486,7 +487,7 @@
                         <td>상품선택(팝업)</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
-                        <td class="red">삭제</td>
+                        <td class="red">삭제 페이지</td>
                     </tr>
 					<tr>
                         <td>과금정책선택(팝업)</td>
@@ -599,20 +600,21 @@
                         <td>사용자수 과금내역</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
-                        <td class="red">삭제</td>
+                        <td class="red">삭제 페이지</td>
                     </tr>
 					<tr>
                         <td>트랜젝션수 과금내역</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
-                        <td class="red">삭제</td>
+                        <td class="red">삭제 페이지</td>
                     </tr>
 					<tr>
                         <td>트랜젝션 내역</td>
                         <td></td>
                         <td><a target="_blank" href="billing_a/cup10614.html">cup10614.html</a></td>
                         <td class="red">
-							2019-02-25 수정
+							2019-02-25 수정 <br />
+							2019-02-27 수정
 						</td>
                     </tr>
 					<tr>
@@ -664,7 +666,8 @@
 							2019-02-12 수정 <br />
 							2019-02-20 수정 <br />
 							2019-02-21 수정 <br />
-							2019-02-25 수정
+							2019-02-25 수정 <br />
+							2019-02-27 수정
 						</td>
                     </tr>
 					<tr>
@@ -739,13 +742,14 @@
 						</td>
                     </tr>
 					<tr>
-                        <td rowspan="2">권한</td>
-                        <td>Roles</td>
+                        <td>권한 목록</td>
+                        <td></td>
                         <td><a target="_blank" href="#"></a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
-                        <td>Groups</td>
+                        <td>권한 관리</td>
+						<td></td>
                         <td><a target="_blank" href="#"></a></td>
                         <td class="red"></td>
                     </tr>
