--- a/pub/templateB.html
+++ b/pub/templateB.html
@@ -417,6 +417,7 @@
 	<!-- //souce code 뷰어 -->
 
 	<h2>자동완성 기능</h2>
+	<!--
 	<dl class="inpItem">
 		<dt id="i10003-companyLb">Company</dt>
 		<dd>
@@ -442,6 +443,22 @@
 			</div>
 		</dd>
 	</dl>
+	-->
+
+	<dl class="inpItem">
+		<dt id="i10003-companyLb">Company</dt>
+		<dd>
+			<div class="inputBox schType key short">
+				<div class="inner">
+					<input type="text" class="inp autoSch key code Readonly" id="n" readonly="readonly">
+					<input type="text" name="" class="inp autoSch key name" id="i10003-company" placeholder="Type Company Name">
+					<button type="button" class="inpReset"></button>
+				</div>
+			</div>
+		</dd>
+	</dl>
+
+
 	<!-- souce code 뷰어 -->
 	<textarea class="pubTextarea" name="" id="" cols="30" rows="10">
 <dl class="inpItem">
@@ -459,6 +476,14 @@
 	</textarea>
 	<!-- //souce code 뷰어 -->
 	<p>길이가 짧은 타입은 short 클래스 추가 ex : inputBox schType ty2 short</p>
+
+
+
+
+
+
+
+
 
 	<h2>Combobox</h2>
 	<div class="comboBox">
