--- a/service_a/cup10703.html
+++ b/service_a/cup10703.html
@@ -205,6 +205,7 @@
 								</ul>
 								<button type="button" class="btn schBtn" id="i10703_search">Search</button>
 							</div>
+
 							<h3 class="tit" id="i10703_tariffsLb">Tariffs</h3>
 							<!-- 2019-02-25 수정 -->
 							<div class="ibsheetTop">
@@ -273,6 +274,13 @@
 							<div class="ibsheetDiv">
 								ibsheet
 							</div>
+
+							<!-- 2019-02-27 추가 -->
+							<h3 class="tit" id="i10703_revisionsLb">Revisions</h3>
+							<div class="ibsheetDiv">
+								ibsheet
+							</div>
+							<!--// 2019-02-27 추가 -->
 						</div>
 					</form>
 					<!--// 컨텐츠 영역 -->
