--- a/common/page500.html
+++ b/common/page500.html
@@ -37,17 +37,16 @@
 			<div class="errorPage">
 				<h1><img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" /></h1>
 				<p class="errorTxt1">
-					Error 500 <br />
-					Internal Server Error.
+					500 Internal Server Error
 				</p>
-					<p class="errorTxt2">
-						There is a problem with the page you are trying to <br />
+				<p class="errorTxt2">
+					There is a problem with the page you are trying to <br />
 					connect to. The page cannot be displayed.
 				</p>
 
-						<div class="btns">
-							<a href="#" class="btn error">Help Desk</a>
-						</div>
+					<div class="btns">
+						<a href="#" class="btn error">Help Desk</a>
+					</div>
 
 			</div>
 		</div>
