--- a/htmlList_a.html
+++ b/htmlList_a.html
@@ -324,7 +324,8 @@
                         <td><a target="_blank" href="user/cup10103.html">cup10103.html</a></td>
                         <td class="red">
 							2019-02-20 수정 <br />
-							2019-02-21 수정
+							2019-02-21 수정 <br />
+							2019-02-28 수정
 						</td>
                     </tr>
 					<tr>
@@ -387,7 +388,8 @@
                         <td class="red">
 							2019-02-20 수정 <br />
 							2019-02-25 수정 <br />
-							2019-02-27 수정
+							2019-02-27 수정 <br />
+							2019-02-28 수정
 						</td>
                     </tr>
 					<tr>
@@ -702,10 +704,7 @@
                         <td>Notice관리</td>
                         <td></td>
                         <td><a target="_blank" href="site_a/cup10802.html">cup10802.html</a></td>
-                        <td class="red">
-							작업 중 <br />
-							파일 업로드 방식 확정 후 완료예정
-						</td>
+                        <td class="red"></td>
                     </tr>
 					<tr>
                         <td>파일선택</td>
