--- a/pub/templateC.html
+++ b/pub/templateC.html
@@ -110,7 +110,7 @@
 	<div class="box">
 		<pre class="brush: html;">
 			<div class="editorWrap">
-				<div id="editor"></div>
+				<div class="editor"></div>
 			</div>
 		</pre>
 	</div>
