--- a/Organization_a/cup10202.html
+++ b/Organization_a/cup10202.html
@@ -74,7 +74,11 @@
 								<div class="gnbTit ty1">Organization</div>
 								<ul class="dept">
 									<li><a href="#" data-name="OrganizationList">Organization List</a></li>
-									<li><a href="#" data-name="Organization">Organization</a></li>
+									<!-- 2019-03-05 삭제 -->
+									<!--
+					<li><a href="#" data-name="Organization">Organization</a></li>
+					-->
+									<!--// 2019-03-05 삭제 -->
 								</ul>
 								<button type="button" class="clip"></button>
 							</li>
@@ -247,7 +251,9 @@
 											<dl class="inpItem">
 												<dt id="cup10202_aliasLb">Alias</dt>
 												<dd>
-													<div class="inputBox Edit_AlphaNum">
+													<!-- 2019-03-05 수정 -->
+													<div class="inputBox Only_AlphaNum">
+														<!--// 2019-03-05 수정 -->
 														<input type="text" name="cup10202_alias" class="inp" id="cup10202_alias" maxlength="50">
 														<button type="button" class="inpReset"></button>
 													</div>
