--- a/admin_a/cup11003.html
+++ b/admin_a/cup11003.html
@@ -160,15 +160,15 @@
 					<!-- 컨텐츠 영역 -->
 					<form action="">
 						<div class="layout Layout_List">
-							<h2 class="tit" id="i10615_interfaceHistoryLb">Interface History</h2>
+							<h2 class="tit" id="i11003_roleListLb">Role List</h2>
 							<div class="schOptionGroup">
 								<ul class="itemList1">
 									<li>
 										<dl class="inpItem">
-											<dt id="i10615_keywordLb">Keyword</dt>
+											<dt id="i11003_keywordLb">Keyword</dt>
 											<dd>
 												<div class="inputBox">
-													<input type="text" name="i10615_keyword" class="inp inputFocus" id="i10615_keyword" placeholder="ID" maxlength="50">
+													<input type="text" name="i11003_keyword" class="inp inputFocus" id="i11003_keyword" placeholder="Role" maxlength="50">
 													<button type="button" class="inpReset"></button>
 												</div>
 											</dd>
@@ -176,37 +176,21 @@
 									</li>
 									<li>
 										<dl class="inpItem">
-											<dt id="i10615_typeLb">Type</dt>
-											<dd>
-												<div class="comboBox">
-													<select class="comboSelect" id="i10615_typeLb" placeholder="Select a Type">
-														<option value="">Select a Type</option>
-														<option value="T-Shirt">T-Shirt</option>
-														<option value="T-Shirt Woman">T-Shirt Woman</option>
-														<option value="Yellow T-Shirt">Yellow T-Shirt</option>
-														<option value="Zebra T-Shoot">Zebra T-Shoot</option>
-													</select>
-												</div>
-											</dd>
-										</dl>
-									</li>
-									<li>
-										<dl class="inpItem">
-											<dt id="i10615_creationLb">Creation</dt>
+											<dt id="i11003_creationLb">Creation</dt>
 											<dd>
 												<div class="inputBox Edit_date">
-													<input type="text" name="daterange" class="inp daterange" id="i10615_creation" placeholder="From - To" />
+													<input type="text" name="daterange" class="inp daterange" id="i11003_creation" placeholder="From - To" />
 												</div>
 											</dd>
 										</dl>
 									</li>
 								</ul>
-								<button type="button" class="btn schBtn" id="i10615_search">Search</button>
+								<button type="button" class="btn schBtn" id="i11003_search">Search</button>
 							</div>
 
-							<h3 class="tit" id="i10615_interfacesLb">Interfaces</h3>
+							<h3 class="tit" id="i11003_rolesLb">Roles</h3>
 							<div class="ibsheetTop">
-								<div class="ui floating dropdown labeled icon button filter" id="i10615_filterStatus">
+								<div class="ui floating dropdown labeled icon button filter" id="i11003_filterStatus">
 									<i class="filter icon"></i>
 									<span class="text">Filter Status</span>
 									<div class="menu">
