--- a/htmlList.html
+++ b/htmlList.html
@@ -149,7 +149,8 @@
                         <td><a target="_blank" href="common/nav.html">nav.html</a></td>
                         <td class="red">
 							2019-02-01 수정 <br />
-							2019-02-07 수정
+							2019-02-07 수정 <br />
+							2019-03-05 수정
 						</td>
                     </tr>
 					<tr>
@@ -340,7 +341,7 @@
                         <td>Home-게시물</td>
                         <td></td>
                         <td><a target="_blank" href="login/"></a></td>
-                        <td class="red"></td>
+                        <td class="red">삭제 페이지</td>
                     </tr>
 					<tr>
                         <td>계정 확인 송부</td>
@@ -525,7 +526,7 @@
                         <td>상품선택</td>
                         <td></td>
                         <td></td>
-                        <td class="red"></td>
+                        <td class="red">삭제 페이지</td>
                     </tr>
 					<tr>
                         <td>부가서비스선택</td>
