--- a/htmlList_a.html
+++ b/htmlList_a.html
@@ -149,7 +149,8 @@
                         <td><a target="_blank" href="common/nav.html">nav.html</a></td>
                         <td class="red">
 							2019-02-01 수정 <br />
-							2019-02-07 수정
+							2019-02-07 수정 <br />
+							2019-03-05 수정
 						</td>
                     </tr>
 					<tr>
@@ -311,7 +312,7 @@
 						</td>
                     </tr>
 					<tr>
-                        <td>암호 변경 - <span class="red">[ 팝업 ]</span></td>
+                        <td>암호 변경(팝업)</td>
                         <td></td>
                         <td><a target="_blank" href="user/cup10102.html">cup10102.html</a></td>
                         <td>
@@ -389,7 +390,8 @@
 							2019-02-20 수정 <br />
 							2019-02-25 수정 <br />
 							2019-02-27 수정 <br />
-							2019-02-28 수정
+							2019-02-28 수정 <br />
+							2019-03-05 수정
 						</td>
                     </tr>
 					<tr>
@@ -402,7 +404,9 @@
                         <td>Tenant 관리</td>
                         <td></td>
                         <td><a target="_blank" href="Organization_a/cup10204.html">cup10204.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							2019-03-05 수정
+						</td>
                     </tr>
 					<tr>
                         <td>Company 목록</td>
@@ -419,19 +423,19 @@
 					<tr>
                         <td>사용자초청(팝업)</td>
                         <td></td>
-                        <td><a target="_blank" href="Organization_a/cup10104.html"></a></td>
+                        <td><a target="_blank" href="user/cup10104.html">cup10104.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>사용자해지(메일)</td>
                         <td></td>
-                        <td><a target="_blank" href="Organization_a/cup10105.html"></a></td>
+                        <td><a target="_blank" href="user/cup10105.html">cup10105.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>사용자초청(메일)</td>
                         <td></td>
-                        <td><a target="_blank" href="Organization_a/cup10107.html"></a></td>
+                        <td><a target="_blank" href="user/cup10107.html">cup10107.html</a></td>
                         <td class="red"></td>
                     </tr>
 
@@ -450,19 +454,19 @@
                         <td>신규고객</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
-                        <td class="red"></td>
+                        <td class="red">cup10501.html 화면으로 대체</td>
                     </tr>
 					<tr>
                         <td>유료고객</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
-                        <td class="red"></td>
+                        <td class="red">cup10501.html 화면으로 대체</td>
                     </tr>
 					<tr>
                         <td>탈퇴고객</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
-                        <td class="red"></td>
+                        <td class="red">cup10501.html 화면으로 대체</td>
                     </tr>
 					<tr>
                         <td>가입정보관리</td>
@@ -619,10 +623,22 @@
                         <td class="red"></td>
                     </tr>
 					<tr>
+                        <td>전송 상세(팝업)</td>
+                        <td></td>
+                        <td><a target="_blank" href="billing_a/cup10616.html">cup10616.html</a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>수동과금 생성</td>
+                        <td></td>
+                        <td><a target="_blank" href="billing_a/cup10617.html">cup10617.html</a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
                         <td>스케줄러(NO UI)</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
-                        <td class="red"></td>
+                        <td class="red">삭제 페이지</td>
                     </tr>
 
 					<tr class="line">
@@ -650,7 +666,8 @@
 							2019-02-07 수정 <br />
 							2019-02-11 수정 <br />
 							2019-02-20 수정 <br />
-							2019-02-26 수정
+							2019-02-26 수정 <br />
+							2019-03-05 수정
 						</td>
                     </tr>
 					<tr>
@@ -680,7 +697,7 @@
                         <td>서비스가격(팝업)</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
-                        <td class="red"></td>
+                        <td class="red">삭제 페이지</td>
                     </tr>
 					<tr>
                         <td>서비스그룹</td>
@@ -710,7 +727,7 @@
                         <td>파일선택</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
-                        <td class="red"></td>
+                        <td class="red">삭제 페이지</td>
                     </tr>
 
 					<tr class="line">
@@ -736,13 +753,13 @@
 					<tr>
                         <td>권한 목록</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td><a target="_blank" href="admin_a/cup11003.html">cup11003.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>권한 관리</td>
 						<td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td><a target="_blank" href="admin_a/cup11004.html">cup11004.html</a></td>
                         <td class="red"></td>
                     </tr>
 
