--- a/admin_a/cup11004.html
+++ b/admin_a/cup11004.html
@@ -145,7 +145,6 @@
 					</div>
 				</nav>
 				<div class="content editBtns">
-					<!-- 2019-02-07 클래스 추가 -->
 					<div class="tabWrap">
 						<div class="tabHome single">
 							<a href="#">Homes</a>
@@ -161,204 +160,113 @@
 					<!-- 컨텐츠 영역 -->
 					<form action="">
 						<div class="layout Layout_Sidebar">
-							<!-- 2019-02-01 수정 -->
-							<h2 class="tit" id="cup10702_serviceLb">Service</h2>
+							<h2 class="tit" id="i11004_roleLb">Role</h2>
 							<div class="serviceCode">
-								<!-- 2019-01-30 수정 -->
-								<div class="srvNum" id="cup10702_serviceIDLb">
+								<div class="srvNum" id="">
 									<div class="inputBox inpNone">
-										<input type="text" name="" class="inp" id="" readonly="readonly" value="S10000001" tabindex="-1">
+										<input type="text" name="i11004_roleIdLb" class="inp" id="i11004_roleIdLb" readonly="readonly" value="R10000001" tabindex="-1">
 									</div>
 								</div>
-								<!--// 2019-01-30 수정 -->
 								<div class="actChk">
-									<!-- 2019-01-29 수정 -->
 									<div class="switchChk">
-										<input type="checkbox" name="cup10702_activeChk" id="cup10702_activeChk">
-										<label for="cup10702_activeChk" id="cup10702_active">
+										<input type="checkbox" name="i11004_activeChk" id="i11004_activeChk" checked="checked">
+										<label for="i11004_activeChk" id="i11004_active">
 											<span class="txt1">Inactive</span>
 											<span class="txt2">Active</span>
 										</label>
 									</div>
-									<!--// 2019-01-29 수정 -->
 								</div>
 							</div>
 							<div class="inner">
-								<!-- 2019-02-07 클래스 수정 -->
 								<div class="lsCont">
-									<h3 class="tit" id="cup10702_basicLb">Basic</h3>
+									<h3 class="tit" id="i11004_basicLb">Basic</h3>
 									<ul class="itemList2">
 										<li>
 											<dl class="inpItem">
-												<dt id="cup10702_serviceTypeLb">Service Type</dt>
-												<dd>
-													<div class="comboBox inputFocus">
-														<select class="comboSelect" id="cup10702_serviceType" placeholder="Select a Type">
-															<option value="">Select a Type</option>
-															<option value="T-Shirt">T-Shirt</option>
-															<option value="T-Shirt Woman">T-Shirt Woman</option>
-															<option value="Yellow T-Shirt">Yellow T-Shirt</option>
-															<option value="Zebra T-Shoot">Zebra T-Shoot</option>
-														</select>
-													</div>
-												</dd>
-											</dl>
-										</li>
-										<li>
-											<dl class="inpItem">
-												<dt id="cup10702_serviceNameLb">Service Name</dt>
+												<dt id="i11004_roleNameLb">Role Name</dt>
 												<dd>
 													<div class="inputBox">
-														<input type="text" name="cup10702_serviceName" class="inp Mandate" id="cup10702_serviceName" maxlength="50">
-														<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
+														<input type="text" name="i11004_roleName" class="inp Mandate inputFocus" id="i11004_roleName">
+														<button type="button" class="inpReset"></button>
 													</div>
 												</dd>
 											</dl>
 										</li>
 										<li>
 											<dl class="inpItem">
-												<dt id="cup10702_serviceAliasLb">Service Alias</dt>
+												<dt id="i11004_descriptionLb">Description</dt>
 												<dd>
-													<!-- 2019-02-07 수정 -->
-													<!-- 2019-03-05 수정 -->
-													<div class="inputBox Only_AlphaNum">
-														<!--// 2019-03-05 수정 -->
-														<input type="text" name="cup10702_serviceAlias" class="inp" id="cup10702_serviceAlias">
-														<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
-													</div>
-													<div class="tooltip">
-														<div class="tips">
-															<strong class="tit">Alias</strong>
-															<p class="txt">Alias can be service <br />code or abbreviation.</p>
-														</div>
-													</div>
-													<!--// 2019-02-07 수정 -->
-												</dd>
-											</dl>
-										</li>
-										<li>
-											<dl class="inpItem">
-												<dt id="cup10702_descriptionLb">Description</dt>
-												<dd>
-													<div class="textareaDiv">
-														<textarea name="" id="cup10702_description" cols="30" rows="10" class="textarea" maxlength="500"></textarea>
-														<!-- 2019-02-26 수정 -->
+													<div class="textareaDiv Edit_AlphaNum">
+														<textarea name="i11004_description" id="i11004_description" cols="30" rows="10" class="textarea" maxlength="500" placeholder=""></textarea>
 														<div class="byte"><span class="bold">0</span>/500</div>
-														<!--// 2019-02-26 수정 -->
 													</div>
 												</dd>
 											</dl>
 										</li>
 									</ul>
 
-									<h3 class="tit" id="cup10702_suggestedTariffLb">Selling</h3>
-									<ul class="itemList2">
-										<li>
-											<dl class="inpItem">
-												<dt id="cup10702_suggestedTariff">Suggested Tariff</dt>
-												<dd>
-													<!-- 2019-02-11 수정 -->
-													<div class="inputBox schType ty1">
-														<div class="inner">
-															<input type="text" class="inp autoSch ty1 code Readonly" readonly="readonly" tabindex="-1">
-															<input type="text" name="cup10702_suggestedTariff" class="inp autoSch ty1 name" id="cup10702_suggestedTariff" placeholder="Select a Tariff">
-															<button type="button" class="inpReset"></button>
-														</div>
-													</div>
-													<!--// 2019-02-11 수정 -->
-												</dd>
-											</dl>
-										</li>
-										<li>
-											<dl class="inpItem">
-												<dt id="cup10702_addTariffLb">Need New Tariff?</dt>
-												<dd>
-													<button type="button" class="btn" id="cup10702_newTariff">Add Tariff</button> <!-- 2019-02-01 수정 -->
-												</dd>
-											</dl>
-										</li>
-										<li>
-											<dl class="inpItem">
-												<dt id="cup10702_isForOnlineSalesLb">Is for Online Sales</dt>
-												<dd>
-													<div class="checkbox">
-														<input type="checkbox" name="cup10702_isForOnlineSalesChk" id="cup10702_isForOnlineSalesChk" checked="checked"><label for="cup10702_isForOnlineSalesChk" id="cup10702_isForOnlineSales">Apply</label>
-													</div>
-												</dd>
-											</dl>
-										</li>
-										<li>
-											<dl class="inpItem">
-												<dt id="cup10702_displayOrderLb">Display Order</dt>
-												<dd>
-													<div class="inputBox">
-														<input type="text" name="cup10702_displayOrder" class="inp" id="cup10702_displayOrder" placeholder="Ascending Order" maxlength="10">
-														<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
-													</div>
-												</dd>
-											</dl>
-										</li>
-									</ul>
+									<h3 class="tit" id="i11004_usersLb">Users</h3>
+									<div class="ibsheetTop">
+										<div class="btns">
+											<button type="button" class="btn addBtn" id="i11004_rowAdd">ADD</button>
+											<button type="button" class="btn removeBtn" id="i11004_rowDelete">REMOVE</button>
+										</div>
+									</div>
+									<div class="ibsheetDiv">
+										ibsheet
+									</div>
 								</div>
+
 								<div class="lsCont fix">
-									<h3 class="tit">Record</h3>
+									<h3 class="tit" id="i11004_record">Record</h3>
 									<dl class="inpItem2">
-										<dt id="cup10702_createdOnLb">Created on</dt>
+										<dt id="i11004_createdOnLb">Created on</dt>
 										<dd>
-											<!-- 2019-01-31 수정 -->
 											<div class="ele">
 												<div class="inputBox Edit_date single">
-													<input type="text" name="cup10702_createDate" class="inp Readonly" id="cup10702_createDate" value="12-14-2018" readonly="readonly" tabindex="-1">
+													<input type="text" name="i11004_createDate" class="inp Readonly" id="i11004_createDate" value="12-14-2018" readonly="readonly" tabindex="-1">
 												</div>
 												<div class="inputBox Edit_Time readonly">
-													<input type="text" name="cup10702_createTime" class="inp Readonly" id="cup10702_createTime" value="10 : 20 AM" readonly="readonly" tabindex="-1">
+													<input type="text" name="i11004_createTime" class="inp Readonly" id="i11004_createTime" value="10 : 20 AM" readonly="readonly" tabindex="-1">
 												</div>
 											</div>
 											<div class="ele">
 												<div class="inputBox Edit_User">
-													<!-- 2019-02-01 수정 -->
 													<div class="thumb">
-														<img src="../static/images/common/icon/icon_person_small.png" alt="" />
+														<img src="../static/images/common/icon/icon_person_small.png" alt="" name="i11004_createdByPhotoUrl" id="i11004_createdByPhotoUrl" />
 													</div>
-													<!--// 2019-02-01 수정 -->
-													<input type="text" name="cup10702_createdBy" class="inp Readonly" id="cup10702_createdBy" value="Park, JungIl" readonly="readonly" tabindex="-1">
+													<input type="text" name="i11004_createdBy" class="inp Readonly" id="i11004_createdBy" value="Park, JungIl" readonly="readonly" tabindex="-1">
 												</div>
 											</div>
-											<!--// 2019-01-31 수정 -->
 										</dd>
 									</dl>
 
 									<dl class="inpItem2">
-										<dt id="cup10702_modifiedOnLb">Modified on</dt>
+										<dt id="i11004_modifiedOnLb">Modified on</dt>
 										<dd>
-											<!-- 2019-01-31 수정 -->
 											<div class="ele">
 												<div class="inputBox Edit_date single">
-													<input type="text" name="cup10702_modifiedDate" class="inp Readonly" id="cup10702_modifiedDate" value="12-14-2018" readonly="readonly" tabindex="-1">
+													<input type="text" name="i11004_modifiedDate" class="inp Readonly" id="i11004_modifiedDate" value="12-14-2018" readonly="readonly" tabindex="-1">
 												</div>
 												<div class="inputBox Edit_Time readonly">
-													<input type="text" name="cup10702_modifiedTime" class="inp Readonly" id="cup10702_modifiedTime" value="10 : 20 AM" readonly="readonly" tabindex="-1">
+													<input type="text" name="i11004_modifiedTime" class="inp Readonly" id="i11004_modifiedTime" value="10 : 20 AM" readonly="readonly" tabindex="-1">
 												</div>
 											</div>
 											<div class="ele">
 												<div class="inputBox Edit_User">
-													<!-- 2019-02-01 수정 -->
 													<div class="thumb">
-														<img src="../static/images/common/icon/icon_person_small.png" alt="" />
+														<img src="../static/images/common/icon/icon_person_small.png" alt="" name="i11004_modifiedByPhotoUrl" id="i11004_modifiedByPhotoUrl" />
 													</div>
-													<!--// 2019-02-01 수정 -->
-													<input type="text" name="cup10702_modifiedBy" class="inp Readonly" id="cup10702_modifiedBy" value="Park, JungIl" readonly="readonly" tabindex="-1">
+													<input type="text" name="i11004_modifiedBy" class="inp Readonly" id="i11004_modifiedBy" value="Park, JungIl" readonly="readonly" tabindex="-1">
 												</div>
 											</div>
-											<!--// 2019-01-31 수정 -->
 										</dd>
 									</dl>
 
 								</div>
 							</div>
 							<div class="editBtns">
-								<!-- 2019-02-07 클래스 수정 -->
-								<button type="button" class="btn basic" id="cup10702_Save">Save</button> <!-- 2019-02-01 수정 -->
+								<button type="button" class="btn basic" id="i11004_save">Save</button>
 							</div>
 						</div>
 					</form>
@@ -367,13 +275,11 @@
 			</div>
 		</section>
 	</div>
-	<!-- 2019-02-07 추가 -->
 	<script type="text/javascript">
 		$(function() {
 			$('form').areYouSure();
 		});
 	</script>
-	<!--// 2019-02-07 추가 -->
 </body>
 
 </html>
